fix(docker): client docker file

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,13 +2,13 @@ FROM node:lts-alpine
 
 WORKDIR /app
 
-COPY public ./
-COPY src ./
-COPY package.json ./
+COPY public public
+COPY src src
+COPY package.json package.json
 
 RUN npm install
 
-COPY package-lock.json ./
-COPY tsconfig.json ./
+COPY package-lock.json package-lock.json
+COPY tsconfig.json tsconfig.json
 
 CMD npm start
