refactor docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,11 +18,16 @@ services:
   db:
     image: postgres
     restart: always
-    environment:
-      POSTGRES_PASSWORD: example
+    env_file:
+      - vars.env
+    volumes:
+      - postgres:/var/lib/postgresql/data
 
   adminer:
     image: adminer
     restart: always
     ports:
       - 8080:8080
+
+volumes:
+  postgres:
