Install Tailwind and daisyUI

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,5 +10,6 @@ RUN npm install
 
 COPY package-lock.json package-lock.json
 COPY tsconfig.json tsconfig.json
+COPY tailwind.config.js tailwind.config.js
 
 CMD npm start
