--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.3"
+    "@types/leaflet": "^1.9.3",
+    "daisyui": "^3.1.9",
+    "tailwindcss": "^3.3.2"
   }
 }
