--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/leaflet": "^1.9.3",
     "daisyui": "^3.1.9",
     "tailwindcss": "^3.3.2"
