--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "WATCHPACK_POLLING=TRUE graphql-codegen && react-scripts start",
+    "start": "WATCHPACK_POLLING=TRUE react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
