--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -5,10 +5,14 @@ on: pull_request
 jobs:
   unit-test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: client
     steps:
       - name: Check out the code
         uses: actions/checkout@v3
       - name: Install npm dependencies
-        run: cd ./client && npm install
+        run: npm install
       - name: Launch unit tests
-        run: cd ./client && npm run unit-test
+        run: npm run unit-test
