--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs:
   client-unit-test:
-    if: github.base_ref == 'refs/heads/dev'
+    if: github.base_ref == 'dev'
     runs-on: ubuntu-latest
     defaults:
       run:
