--- a/.github/workflows/deploy-ci.yml
+++ b/.github/workflows/deploy-ci.yml
@@ -3,7 +3,7 @@ name: deploy-ci
 on: pull_request
 
 jobs:
-  client-unit-test:
+  client-tests:
     if: github.base_ref == 'main'
     runs-on: ubuntu-latest
     defaults:
@@ -15,11 +15,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Install npm dependencies
         run: npm install
-      - name: Launch unit tests
-        run: npm run unit-test
+      - name: Launch tests
+        run: npm run test
 
   docker:
-    needs: client-unit-test
+    needs: client-tests
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
