--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,9 @@
-name: unit-test
+name: tests
 
 on: pull_request
 
 jobs:
-  client-unit-test:
+  client-tests:
     if: github.base_ref == 'dev'
     runs-on: ubuntu-latest
     defaults:
@@ -15,5 +15,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Install npm dependencies
         run: npm install
-      - name: Launch unit tests
-        run: npm run unit-test
+      - name: Launch tests
+        run: npm run test
