--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "start": "WATCHPACK_POLLING=TRUE react-scripts start",
     "build": "react-scripts build",
-    "unit-test": "react-scripts test",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "generate": "graphql-codegen"
   },
