--- a/.github/workflows/server-tests-workflow.yml
+++ b/.github/workflows/server-tests-workflow.yml
@@ -4,7 +4,7 @@ on: pull_request
 
 jobs:
   test-server:
-    if: github.base_ref == 'refs/heads/dev'
+    if: github.base_ref == 'dev'
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
