--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/leaflet": "^1.9.3",
     "daisyui": "^3.1.9",
+    "jest": "^27.5.1",
     "tailwindcss": "^3.3.2"
   }
 }
