--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
+version: "1"
+
 services:
   server:
     build: ./server
+    command: sh -c "npm run build && npm run prod"
     env_file:
       - vars.env
     ports:
@@ -10,10 +13,12 @@ services:
 
   client:
     build: ./client
+    command: sh -c "npm run build"
     ports:
       - 3000:3000
     volumes:
       - ./client/src:/app/src
+      - web-client-build:/app/build
 
   db:
     image: postgis/postgis
@@ -22,6 +27,19 @@ services:
       - vars.env
     volumes:
       - postgres:/var/lib/postgresql/data
+
+  nginx:
+    image: nginx:1.21.3
+    depends_on:
+      - server
+      - client
+    restart: always
+    ports:
+      - ${GATEWAY_PORT:-8000}:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - web-client-build:/web-client-build
+      - ./logs:/var/log/nginx
 
   adminer:
     image: adminer
