--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node-dev src/index.ts",
-    "fixtures": "ts-node-dev src/fixtures.ts"
+    "fixtures": "ts-node-dev src/fixtures.ts",
+    "build": "tsc",
+    "prod": "node build/index.js"
   },
   "author": "",
   "license": "ISC",
