--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - 3000:3000
     env_file:
-      - ./client/.env
+      - vars.env
     volumes:
       - ./client/src:/app/src
 
