--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -2,31 +2,35 @@ version: "1"
 
 services:
   server:
-    build: ./server
+    # build: ./server
+    # To replace with the correct path of your server image
+    image: cityguide655@gmail.com/wns-deploy-server
     command: sh -c "npm run build && npm run prod"
     env_file:
       - vars.env
-    ports:
-      - 4000:4000
-    volumes:
-      - ./server/src/:/app/src/
+    expose:
+      - 4000
+    environment:
+      - NODE_ENV=production
+      - SERVER_PORT=4000
 
   client:
-    build: ./client
+    # build: ./client
+    # To replace with the correct path of your client image
+    image: cityguide655@gmail.com/wns-deploy-client
     command: sh -c "npm run build"
-    ports:
-      - 3000:3000
-    volumes:
-      - ./client/src:/app/src
-      - web-client-build:/app/build
-
-  db:
-    image: postgis/postgis
-    restart: always
     env_file:
       - vars.env
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - web-client-build:/app/build
+    environment:
+      - NODE_ENV=production
+
+  db:
+    image: postgis/postgis:15-3.4-alpine
+    restart: always
+    env_file:
+      - vars.env
 
   nginx:
     image: nginx:1.21.3
@@ -35,18 +39,11 @@ services:
       - client
     restart: always
     ports:
-      - ${GATEWAY_PORT:-8000}:80
+      - ${GATEWAY_PORT}:80
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - web-client-build:/web-client-build
       - ./logs:/var/log/nginx
 
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
-
 volumes:
-  postgres:
   web-client-build:
