--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -4,7 +4,7 @@ services:
   server:
     # build: ./server
     # To replace with the correct path of your server image
-    image: cityguide655@gmail.com/wns-deploy-server
+    image: cityguide655/cityguide-server
     command: sh -c "npm run build && npm run prod"
     env_file:
       - vars.env
@@ -17,7 +17,7 @@ services:
   client:
     # build: ./client
     # To replace with the correct path of your client image
-    image: cityguide655@gmail.com/wns-deploy-client
+    image: cityguide655/cityguide-client
     command: sh -c "npm run build"
     env_file:
       - vars.env
@@ -39,7 +39,7 @@ services:
       - client
     restart: always
     ports:
-      - ${GATEWAY_PORT}:80
+      - ${GATEWAY_PORT:-8001}:80
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - web-client-build:/web-client-build
