--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -21,7 +21,7 @@ services:
     env_file:
       - vars.env
     volumes:
-      - web-client-build:/app/build
+      - web-client-build-staging:/app/build
     environment:
       - NODE_ENV=production
 
@@ -50,8 +50,8 @@ services:
       - ${GATEWAY_PORT:-8001}:80
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - web-client-build:/web-client-build
+      - web-client-build-staging:/web-client-build-staging
       - ./logs:/var/log/nginx
 
 volumes:
-  web-client-build:
+  web-client-build-staging:
