--- a/.github/workflows/push-server-image.yml
+++ b/.github/workflows/push-server-image.yml
@@ -1,5 +1,5 @@
 # .github/workflows/staging-server.yml
-name: Compile and push server image
+name: Compile and push server image for staging
 
 # Controls when the workflow will run
 on:
