--- a/.github/workflows/update-production.yml
+++ b/.github/workflows/update-production.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   update-production:
-    if: github.base_ref == 'main'
+    if: github.base_ref == 'staging'
     runs-on: ubuntu-latest
     steps:
       - name: Run Updater
