fix action for staging to main

--- a/.github/workflows/update-production.yml
+++ b/.github/workflows/update-production.yml
@@ -1,15 +1,14 @@
-name: Update production
+name: Update main via webhook
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
 
 jobs:
   update-production:
-    if: github.base_ref == 'staging'
+    if: github.ref == 'refs/heads/staging'
     runs-on: ubuntu-latest
     steps:
-      - name: Run Updater
+      - name: update-production
         run: |
           curl -X GET ${{ secrets.WEBHOOK_PROD }}
