--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/client-preset": "^4.1.0",
+    "@playwright/test": "^1.38.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/leaflet": "^1.9.3",
