manage .env.example & fix ui regression

--- a/vars.env.example
+++ b/vars.env.example
@@ -4,4 +4,5 @@ POSTGRES_DB=toto
 REACT_APP_GRAPHQL_URI_DEV=toto
 REACT_APP_GRAPHQL_URI_PROD=toto
 JWT_SECRET_KEY=toto
-MAP_TILER_KEY=toto
+REACT_APP_MAP_TILER_KEY=toto
+REACT_APP_PEXELS_API=toto
