--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -15,16 +15,16 @@
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "tailwindcss": "^3.3.3"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "daisyui": "^3.9.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
