--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -12,21 +12,22 @@
     "@apollo/client": "^3.7.16",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-toastify": "^9.1.3",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "daisyui": "^3.9.2",
-    "typescript": "^5.1.3",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
