--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -20,11 +20,15 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "graphql": "^16.7.1",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/leaflet": "^1.9.3",
     "daisyui": "^3.9.2",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
