--- a/mobile-app/tsconfig.json
+++ b/mobile-app/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "esModuleInterop": true
   },
   "extends": "expo/tsconfig.base"
