--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -24,8 +24,9 @@
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-toastify": "^9.1.3",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "react-router-native": "^6.18.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
