--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.13",
+    "expo-constants": "~14.4.2",
     "expo-status-bar": "~1.6.0",
     "graphql": "^16.7.1",
     "leaflet": "^1.9.4",
@@ -22,12 +23,12 @@
     "react": "18.2.0",
     "react-leaflet": "^4.2.1",
     "react-native": "0.72.6",
+    "react-native-maps": "^1.8.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-router-native": "^6.18.0",
-    "react-toastify": "^9.1.3",
-    "expo-constants": "~14.4.2"
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
