--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -28,7 +28,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-router-native": "^6.18.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
