--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -23,7 +23,7 @@
     "react": "18.2.0",
     "react-leaflet": "^4.2.1",
     "react-native": "0.72.6",
-    "react-native-maps": "^1.8.0",
+    "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
