--- a/.github/workflows/tests-runners.yml
+++ b/.github/workflows/tests-runners.yml
@@ -15,5 +15,20 @@ jobs:
         uses: actions/checkout@v3
       - name: Install npm dependencies
         run: npm install
-      - name: Launch tests
+      - name: Launch unit tests
+        run: npm run test
+
+  e2e-tests:
+    if: github.base_ref == 'dev'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: e2e
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v3
+      - name: Install npm dependencies
+        run: npm install
+      - name: Launch E2E tests
         run: npm run test
