--- a/e2e/package.json
+++ b/e2e/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
     "playwright": "^1.40.1"
   }
 }
