--- a/.github/workflows/tests-runners.yml
+++ b/.github/workflows/tests-runners.yml
@@ -25,7 +25,5 @@ jobs:
       run:
         working-directory: e2e
     steps:
-      - name: Check out the code
-        uses: actions/checkout@v3
-      - name: Run tests
+      - name: Run e2e tests
         uses: ./.github/workflows/playwright.yml
