--- a/e2e/.github/workflows/playwright.yml
+++ b/e2e/.github/workflows/playwright.yml
@@ -1,9 +1,7 @@
-name: Playwright Tests
-on:
-  push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
+name: e2e tests
+
+on: pull_request
+
 jobs:
   test:
     timeout-minutes: 60
