--- a/e2e/package.json
+++ b/e2e/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@playwright/test": "^1.40.1",
     "playwright": "^1.40.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
