--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -20,12 +20,9 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests with environment variable
-        run: |
-          STAGING_URL=${{ secrets.STAGING_URL }}
-          example-command "$STAGING_URL"
-          npm test
         env:
-          STAGING_URL: ${{ secrets.STAGING_URL }}
+          STAGING_URL: ${{ secrets.STAGING_URL}}
+        run: npm test
       - uses: actions/upload-artifact@v3
         if: always()
         with:
