--- a/.github/workflows/tests-runners.yml
+++ b/.github/workflows/tests-runners.yml
@@ -3,7 +3,7 @@ name: tests
 on: pull_request
 
 jobs:
-  client-unit-tests:
+  client-tests:
     if: github.base_ref == 'dev'
     runs-on: ubuntu-latest
     defaults:
@@ -15,5 +15,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Install npm dependencies
         run: npm install
-      - name: Launch unit tests
+      - name: Launch client tests
         run: npm run test
