--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,6 +1,8 @@
 name: e2e tests
 
-on: pull_request
+on:
+  pull_request:
+    branches: [ dev, staging ]
 
 jobs:
   playwright:
@@ -19,10 +21,8 @@ jobs:
         run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
-      - name: Run Playwright tests with environment variable
-        env:
-          STAGING_URL: ${{ secrets.STAGING_URL}}
-        run: npm test
+      - name: Run Playwright tests
+        run: npx playwright test
       - uses: actions/upload-artifact@v3
         if: always()
         with:
