--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "e2e-test": "docker compose -f docker-compose.e2e.test.yml up --build --exit-code-from e2e",
     "test": "playwright test"
   },
   "keywords": [],
