Replace env_files with vars.env in docker-compose.e2e.test.yml

--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -17,7 +17,7 @@ services:
   server:
     build: ./server
     env_file:
-      - .env.local
+      - vars.env
     healthcheck:
       test: 'curl --fail --request POST --header ''content-type: application/json'' --url ''http://localhost:5000'' --data ''{"query":"query { __typename }"}'' || exit 1'
       interval: 5s
@@ -29,7 +29,7 @@ services:
 
   client:
     build: ./client
-    env_file: .env.e2e
+    env_file: vars.env
     healthcheck:
       test: "curl --fail --request GET --url 'http://localhost:3000' || exit 1"
       interval: 5s
