--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -13,6 +13,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+      
+      - name: create env file
+        run: |
+          touch vars.env
+          echo "JWT_SECRET_KEY=qkdjfhqiudfhviusdfhgiousdhfsuhfgiuosdhfoiudshfog" >> vars.env
+          echo "POSTGRES_PASSWORD=example" >> vars.env
+          echo "POSTGRES_USER=toto" >> vars.env
+          echo "POSTGRES_DB=postgres" >> vars.env
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
