--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -31,7 +31,7 @@ services:
 
   client:
     build: ./client
-    env_file: .env.e2e
+    env_file: vars.env
     healthcheck:
       test: "curl --fail --request GET --url 'http://localhost:3000' || exit 1"
       interval: 5s
