--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -16,10 +16,10 @@ jobs:
       - name: create env file
         run: |
           touch vars.env
-          echo "JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY}}" >> vars.env
-          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD}}" >> vars.env
-          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER}}" >> vars.env
-          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB}}" >> vars.env
+          echo "JWT_SECRET_KEY=${{ vars.JWT_SECRET_KEY}}" >> vars.env
+          echo "POSTGRES_PASSWORD=${{ vars.POSTGRES_PASSWORD}}" >> vars.env
+          echo "POSTGRES_USER=${{ vars.POSTGRES_USER}}" >> vars.env
+          echo "POSTGRES_DB=${{ vars.POSTGRES_DB}}" >> vars.env
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
