--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -13,13 +13,19 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+      - name: display_variables
+        run: |
+          echo "JWT_SECRET_KEY=${{ github.repository.JWT_SECRET_KEY}}"
+          echo "POSTGRES_PASSWORD=${{ github.repository.POSTGRES_PASSWORD}}"
+          echo "POSTGRES_USER=${{ github.repository.POSTGRES_USER}}"
+          echo "POSTGRES_DB=${{ github.repository.POSTGRES_DB}}"
       - name: create env file
         run: |
           touch vars.env
-          echo "JWT_SECRET_KEY=${{ vars.JWT_SECRET_KEY}}" >> vars.env
-          echo "POSTGRES_PASSWORD=${{ vars.POSTGRES_PASSWORD}}" >> vars.env
-          echo "POSTGRES_USER=${{ vars.POSTGRES_USER}}" >> vars.env
-          echo "POSTGRES_DB=${{ vars.POSTGRES_DB}}" >> vars.env
+          echo "JWT_SECRET_KEY=${{ github.repository.JWT_SECRET_KEY}}" >> vars.env
+          echo "POSTGRES_PASSWORD=${{ github.repository.POSTGRES_PASSWORD}}" >> vars.env
+          echo "POSTGRES_USER=${{ github.repository.POSTGRES_USER}}" >> vars.env
+          echo "POSTGRES_DB=${{ github.repository.POSTGRES_DB}}" >> vars.env
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
