--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -15,10 +15,16 @@ jobs:
           node-version: 18
       - name: display_variables
         run: |
-          echo "JWT_SECRET_KEY=${{ github.repository.JWT_SECRET_KEY}}"
-          echo "POSTGRES_PASSWORD=${{ github.repository.POSTGRES_PASSWORD}}"
-          echo "POSTGRES_USER=${{ github.repository.POSTGRES_USER}}"
-          echo "POSTGRES_DB=${{ github.repository.POSTGRES_DB}}"
+          echo "vars"
+          echo "JWT_SECRET_KEY=${{ vars.JWT_SECRET_KEY}}"
+          echo "POSTGRES_PASSWORD=${{ vars.POSTGRES_PASSWORD}}"
+          echo "POSTGRES_USER=${{ vars.POSTGRES_USER}}"
+          echo "POSTGRES_DB=${{ vars.POSTGRES_DB}}"
+          | echo "secrets"
+          echo "JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY}}"
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD}}"
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER}}"
+          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB}}"
       - name: create env file
         run: |
           touch vars.env
