--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -23,10 +23,10 @@ jobs:
       - name: create env file
         run: |
           touch vars.env
-          echo "JWT_SECRET_KEY=${{ github.repository.JWT_SECRET_KEY}}" >> vars.env
-          echo "POSTGRES_PASSWORD=${{ github.repository.POSTGRES_PASSWORD}}" >> vars.env
-          echo "POSTGRES_USER=${{ github.repository.POSTGRES_USER}}" >> vars.env
-          echo "POSTGRES_DB=${{ github.repository.POSTGRES_DB}}" >> vars.env
+          echo "JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY}}" >> vars.env
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD}}" >> vars.env
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER}}" >> vars.env
+          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB}}" >> vars.env
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
