add 'with password' to docker-compose.e2e

--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -12,6 +12,8 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"]
+      with:
+        password: ${POSTGRES_PASSWORD}
       interval: 5s
       timeout: 15s
       retries: 100
