--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -11,9 +11,7 @@ services:
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"]
-      with:
-        password: ${POSTGRES_PASSWORD}
+      test: ["CMD-SHELL", "pg_isready -d postgres -U postgres"]
       interval: 5s
       timeout: 15s
       retries: 100
