--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -27,6 +27,8 @@ jobs:
           echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD}}" >> vars.env
           echo "POSTGRES_USER=${{ secrets.POSTGRES_USER}}" >> vars.env
           echo "POSTGRES_DB=${{ secrets.POSTGRES_DB}}" >> vars.env
+          echo "test=test" >> vars.env
+          cat vars.env
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
