--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -9,7 +9,7 @@ services:
     env_file:
       - vars.env
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -h 127.0.0.1 -d postgres -U postgres"]
       interval: 5s
