--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -12,6 +12,8 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    env_variables:
+      test: ["CMD-SHELL", "cat vars.env"]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"]
       interval: 5s
