cat vars.env in docker-compose

--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -13,7 +13,7 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     healthcheck:
-      test: [["CMD-SHELL", "cat vars.env"], ["CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"]]
+      test: ["CMD-SHELL", "cat vars.env", "CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"]
       interval: 5s
       timeout: 15s
       retries: 100
