--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -9,7 +9,7 @@ services:
     env_file:
       - vars.env
     healthcheck:
-      test: ["CMD-SHELL", "cat vars.env", "CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"]
+      test: ["CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"]
       interval: 5s
       timeout: 15s
       retries: 100
