--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up environment variables
         env:
           JWT_SECRET_KEY: testjwt
-          POSTGRES_PASSWORD: testpostgrespwd
+          POSTGRES_PASSWORD: example
         run: |
           touch vars.env
           echo "JWT_SECRET_KEY=${JWT_SECRET_KEY}" >> vars.env
