--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -6,8 +6,8 @@ services:
       - 5432
     ports:
       - 5432:5432
-    env_file:
-      - vars.env
+    environment:
+      POSTGRES_PASSWORD: example
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d postgres -U postgres"]
       interval: 5s
