--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -22,10 +22,14 @@ jobs:
         env:
           JWT_SECRET_KEY: testjwt
           POSTGRES_PASSWORD: example
+          POSTGRES_USER: postgres
+          POSTGRES_DB: postgres
         run: |
           touch vars.env
           echo "JWT_SECRET_KEY=${JWT_SECRET_KEY}" >> vars.env
           echo "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}" >> vars.env
+          echo "POSTGRES_USER=${POSTGRES_USER}" >> vars.env
+          echo "POSTGRES_DB=${POSTGRES_DB}" >> vars.env
 
       - name: Install dependencies with clean install
         run: npm ci
