--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -8,6 +8,8 @@ services:
       - 5432:5432
     environment:
       POSTGRES_PASSWORD: example
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d postgres -U postgres"]
       interval: 5s
