fix wrong port for server container

--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -20,8 +20,10 @@ services:
     build: ./server
     env_file:
       - vars.env
+    ports:
+      - 4000:4000
     healthcheck:
-      test: 'curl --fail --request POST --header ''content-type: application/json'' --url ''http://localhost:5000'' --data ''{"query":"query { __typename }"}'' || exit 1'
+      test: 'curl --fail --request POST --header ''content-type: application/json'' --url ''http://localhost:4000'' --data ''{"query":"query { __typename }"}'' || exit 1'
       interval: 5s
       timeout: 5s
       retries: 10
