--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -23,10 +23,11 @@ services:
     ports:
       - 4000:4000
     healthcheck:
-      test: 'curl --fail --request POST --header ''content-type: application/json'' --url ''http://localhost:4000'' --data ''{"query":"query { __typename }"}'' || exit 1'
+      test: "curl --fail --request GET --header 'content-type: application/json' --url 'http://localhost:4000' || exit 1"
       interval: 5s
       timeout: 5s
-      retries: 10
+      retries: 100
+      start_period: 10s
     depends_on:
       db:
         condition: service_healthy
