simplify healthcheck server

--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -23,7 +23,7 @@ services:
     ports:
       - 4000:4000
     healthcheck:
-      test: "curl --fail --request GET --header 'content-type: application/json' --url 'http://localhost:4000' || exit 1"
+      test: "curl --fail --request GET --url 'http://localhost:4000' || exit 1"
       interval: 5s
       timeout: 5s
       retries: 100
