--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -11,7 +11,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_DB: postgres
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d postgres -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -h 127.0.0.1 -d postgres -U postgres"]
       interval: 5s
       timeout: 15s
       retries: 100
