set a start_period

--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -27,6 +27,7 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
+      start_period: 10s
     depends_on:
       db:
         condition: service_healthy
