--- a/docker-compose.e2e.test.yml
+++ b/docker-compose.e2e.test.yml
@@ -23,7 +23,7 @@ services:
     ports:
       - 4000:4000
     healthcheck:
-      test: 'curl --fail --request POST --header ''content-type: application/json'' --url ''http://localhost:4000'' --data ''{"query":"query { __typename }"}'' || exit 1'
+      test: ["CMD", "curl", "http://localhost:4000/"]
       interval: 5s
       timeout: 5s
       retries: 10
