--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -25,11 +25,11 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_DB: postgres
         run: |
-          touch vars.env
-          echo "JWT_SECRET_KEY=${JWT_SECRET_KEY}" >> vars.env
-          echo "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}" >> vars.env
-          echo "POSTGRES_USER=${POSTGRES_USER}" >> vars.env
-          echo "POSTGRES_DB=${POSTGRES_DB}" >> vars.env
+          touch e2e.env
+          echo "JWT_SECRET_KEY=${JWT_SECRET_KEY}" >> e2e.env
+          echo "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}" >> e2e.env
+          echo "POSTGRES_USER=${POSTGRES_USER}" >> e2e.env
+          echo "POSTGRES_DB=${POSTGRES_DB}" >> e2e.env
 
       - name: Install dependencies with clean install
         run: npm ci
