--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,10 @@
 
 FROM node:lts-alpine3.18
 
+RUN apk --no-cache add curl
+RUN apk add make g++ python3 git
+RUN npm i -g node-pre-gyp
+
 WORKDIR /app
 
 COPY package.json package.json
